fixed aktiviteter tags overlapping (moved them)

--- a/static/css/front-page.css
+++ b/static/css/front-page.css
@@ -198,6 +198,10 @@
 	margin: 0;
 }
 
+.article-author {
+	margin-top: 0;
+}
+
 .article-tags, .folk-article-tags {
 	margin-top: 10px !important;
 }
